--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,72 @@
+* {
+	box-sizing: border-box;
+	padding: 0%;
+	margin: 0%;
+}
+body{
+	overflow-x: hidden;
+}
 .nav-link {
 	width: 120px;
 }
 .logo {
 	height: 50px;
 }
-body {
-	background-color: red;
+.container {
+	margin: 0;
+}
+
+.navbar-header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 5rem 0 5rem
+}
+
+.fa-solid {
+	color: white;
+	margin: 0 1rem 0 1rem;
+	cursor: pointer;
+}
+
+.menu-item {
+	position: absolute;
+	width: 100%;
+	z-index: 2;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	
+}
+.menu-item ul {
+	background-color: white;
+	height: 300vh;
+	text-align: center;
+	flex-direction: column;
+	margin: 0%;
+	padding-right: 7rem;
+	padding-top: 5rem;
+}
+.menu-item ul li{
+	width: 90%;
+	list-style: none;
+	border-bottom: 1px solid #393939;
+	margin-top: 1rem;
+	text-align: left;
+	width: 150px;
+}
+.menu-item ul h2 {
+	font-size: 1.2rem;
+	width: 214px;
+	margin-bottom: 2rem;
+}
+
+.menu-background {
+	background: rgba(59, 59, 59, 0.9);
+	width: 100vw;
+	height: 300vh;
+}
+
+.inactive {
+	display: none;
 }
