--- a/src/styles.css
+++ b/src/styles.css
@@ -16,22 +16,18 @@ h1 {
 	height: 50px;
 }
 .container {
-	margin: 0;
 }
-
 .navbar-header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 0 5rem 0 5rem
 }
-
 .fa-solid {
 	color: white;
 	margin: 0 1rem 0 1rem;
 	cursor: pointer;
 }
-
 .menu-item {
 	position: absolute;
 	width: 100%;
@@ -51,6 +47,7 @@ h1 {
 	position: absolute;
 	top: 0rem;
 	z-index: 2;
+	left: -2.5rem;
 }
 .menu-item ul li{
 	width: 90%;
@@ -61,7 +58,6 @@ h1 {
 	width: 150px;
 	cursor: pointer;
 	font-size: 0.8rem;
-	
 }
 .menu-item ul h2 {
 	font-size: 1.2rem;
@@ -69,19 +65,24 @@ h1 {
 	margin-bottom: 2rem;
 	margin-top: 2rem;
 }
-
 .menu-background {
 	background: rgba(59, 59, 59, 0.9);
 	width: 100vw;
-	height: 400vh;
+	min-height: 400vh;
+	max-height: 100%;
 }
-
 .inactive {
 	display: none;
+}
+.container-item-card {
+	margin-bottom: 3rem;
 }
 
 @media (max-width: 576px){
 	.menu-item {
 		top: 9.7rem;
+	}
+	.menu-item ul {
+		left: -1rem;
 	}
 }
