--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,14 @@ h1 {
 .logo {
 	height: 50px;
 }
+.row {
+	margin-bottom: 3rem;
+}
+.card {
+	margin-top: 1rem;
+}
 .container {
+	margin-bottom: 3rem;
 }
 .navbar-header {
 	display: flex;
